# worldai

./: .gitignore  MANIFEST.in  Makefile  README.md  article_notes.txt  pyproject.toml  requirements.txt
tests/: TODO.txt  conftest.py  notes.txt  sample.txt  test_apis.py  test_browse.py  test_chat.py  test_chat_functions.py  test_chunk.py  test_client_commands.py  test_data.sql  test_db_funcs.py  test_elements.py  test_info_set.py  test_users.py  test_wstate.py
worldai/: character_chat.py  character_functions.py  chat.py  chat.sh  chat_cli.py  chat_functions.py  chunk.py  client.py  client_commands.py  db_access.py  design_chat.py  design_functions.py  dump.py  element_info.py  elements.py  info_set.py  message_records.py  notes.txt  openai.yaml  openapi.json  openapi.yml  schema.sql  server.py  threads.py  upgrade.sql  users.py  world_state.py  worldai.service
worldai/oldui/: package-lock.json  package.json
worldai/oldui/public/: manifest.json
worldai/static/: client.js  view.js
worldai/templates/: client.html  header.html  index.html  list_worlds.html  login.html  macros.html  main_view.html  style.html  top.html  view.html  view_character.html  view_item.html  view_site.html  view_world.html
worldai/ui/: design.html  index.html  package-lock.json  package.json  play.html  vite.config.js
worldai/ui/public/: index.html
worldai/ui/src/: App.css  App.js  App.jsx  ChatScreen.jsx  DesignClient.jsx  api.js  common.js  common.jsx  design.jsx  index.css  play.jsx  util.js
