[project]
name = "worldai"
version = "0.1.0"
description = "WorldAI Builder"
authors = [
  { name = "Jim Wanderer", email = "jmwanderer@gmail.com" },
]
dependencies = [
  "flask",
  "openai",
  "requests",
  "tenacity",
  "termcolor",
  "tiktoken",
]

[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["worldai"]


