[project]
name = "worldai"
version = "0.2.0"
description = "WorldAI Builder"
authors = [
  { name = "Jim Wanderer", email = "jmwanderer@gmail.com" },
]
dependencies = [
  "flask",
  "openai",
  "requests",
  "tenacity",
  "termcolor",
  "tiktoken",
  "markdown",
  "Pillow",  
  "numpy",
]

[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["worldai"]


